crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_079_NINA003_006_Bingo_75_Asia_Ja_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-079-NINA003-006/Bingo 75 (Asia) (Ja) (Unl).zip
rom_sha256=56fc06e65b778221d5aed79938b9209dfe10b6d5a29133fdadaf0ba2022f114f
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=2a8ed22503e0c173
checkpoint f900 fb_fnv1a64=b2cd0f2d5f453487
checkpoint f1100 fb_fnv1a64=a65b5939a66dbf9d
