crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_079_NINA003_006_Double_Strike_Aerial_Attack_Force_USA_v1_1_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-079-NINA003-006/Double Strike - Aerial Attack Force (USA) (v1.1) (Unl).zip
rom_sha256=428d41cc7d815bbda478609ad76f95342d51668b337b8314693ffcb58dd81869
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=338b0b3c7dcbb379
checkpoint f900 fb_fnv1a64=c1e70a1dec1c23db
checkpoint f1100 fb_fnv1a64=8533cb84f316099a
