crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_080_TaitoX1_005_Kyonshiizu_2_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-080-TaitoX1-005/Kyonshiizu 2 (Japan).nes
rom_sha256=4fbf02411b66f8e4cdff16219612fc8aa804ec12f2e2ce19235afbccdaeaf4a2
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=a94da6df05f1b138
checkpoint f900 fb_fnv1a64=e633f7f5e6af7875
checkpoint f1100 fb_fnv1a64=e633f7f5e6af7875
