crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_080_TaitoX1_005_Kyoto_Ryuu_no_Tera_Satsujin_Jiken_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-080-TaitoX1-005/Kyoto Ryuu no Tera Satsujin Jiken (Japan).nes
rom_sha256=de8c4e471aad07647a3a78f93a64c82bc137b04dd4529e5ea130b9774a787618
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=0acf927d8126bf52
checkpoint f900 fb_fnv1a64=363496e5ab8505d5
checkpoint f1100 fb_fnv1a64=363496e5ab8505d5
