crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_080_TaitoX1_005_Kyuukyoku_Harikiri_Stadium_88_Senshu_Shin_Data_Version_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-080-TaitoX1-005/Kyuukyoku Harikiri Stadium - '88 Senshu Shin Data Version (Japan).zip
rom_sha256=902da52a23ec395148e340842baa372ca413ef793df7fff7243c22ae808137ad
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=2fc85260d1a0969d
checkpoint f900 fb_fnv1a64=1cdeadf38dd25a42
checkpoint f1100 fb_fnv1a64=1cdeadf38dd25a42
