crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_080_TaitoX1_005_Minelvaton_Saga_Ragon_no_Fukkatsu_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-080-TaitoX1-005/Minelvaton Saga - Ragon no Fukkatsu (Japan).zip
rom_sha256=cd678db9c6968cf779a126ed98b767eec5bb083b4b1b5f2c183308f9bf0f6cac
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=10a6c658c8e86ebf
checkpoint f900 fb_fnv1a64=92b792d63ad3dce4
checkpoint f1100 fb_fnv1a64=92b792d63ad3dce4
